navbar auth fixed body margin in hope page fixed notifiaction mobile design fixed

--- a/complain/static/css/mystatic.css
+++ b/complain/static/css/mystatic.css
@@ -1273,6 +1273,7 @@ ul#tags-suggest-list{
 .notification-title {
   color:#ff7788;
   font-size:1rem;
+  margin-left: 5px;
   display:relative;
 } 
 .notification-info{
